# data-server-cli

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
snappycli/: auth.py  client.py  main.py
tests/: test_client.py
