[tool.poetry]
name = "snappycli"
version = "0.2.0"
description = "command line interface to a snappy data server client"
authors = ["mleader <mleader@redhat.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/openshift-scale/data-server-cli.git"
keywords = ["snappycli"]
classifiers = [
    "Environment :: Console"
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.6"
toolz = "^0.10.0"
typer = {extras = ["all"], version = "^0.3.1"}
httpx = "^0.18.1"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
snappy = "snappycli.main:app"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

